--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context="br.com.italoqueiroz.escolapp.MainActivity">
 
     <ImageView
-        android:src="@drawable/mochila2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="0.4"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="0.3"
+        android:src="@drawable/mochila2" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0.3"
         android:gravity="center_horizontal"
         android:text="EscolAPP"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="40sp"
-        android:layout_weight="0.4"/>
+        android:textColor="@android:color/black"
+        android:textSize="40sp" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_weight="0.2"
         android:layout_marginBottom="4dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp">
+        android:layout_weight="0.2"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/buttonAcessar"
@@ -39,23 +39,40 @@
             android:layout_height="match_parent"
             android:layout_marginRight="4dp"
             android:layout_weight="0.1"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@color/colorPrimary"
             android:text="Acessar"
             android:textColor="@android:color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <Button
-            android:onClick="executarCadastrar"
             android:id="@+id/buttonCadastrar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="4dp"
             android:layout_weight="0.1"
-            android:background="@android:color/holo_blue_dark"
+            android:background="@color/colorPrimary"
+            android:onClick="executarCadastrar"
             android:text="Cadastrar-se"
             android:textColor="@android:color/white"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_weight="0.2">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Facebook" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Gmail" />
     </LinearLayout>
 
 </LinearLayout>
