--- a/app/src/main/res/layout/activity_acessar.xml
+++ b/app/src/main/res/layout/activity_acessar.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="br.com.italoqueiroz.escolapp.Acessar">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/buttonMapas"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@color/colorPrimary"
+        android:text="Mapas"
+        android:textColor="@android:color/white"
+        android:textSize="20sp" />
+
+</LinearLayout>
