--- a/app/src/main/res/layout/activity_cadastrar.xml
+++ b/app/src/main/res/layout/activity_cadastrar.xml
@@ -8,37 +8,53 @@
     android:orientation="vertical"
     tools:context="br.com.italoqueiroz.escolapp.Cadastrar"
     android:layout_marginRight="8dp"
-    android:layout_marginLeft="8dp">
+    android:layout_marginLeft="8dp"
+    android:layout_marginBottom="8dp">
 
 
     <EditText
-    android:id="@+id/editText"
+    android:id="@+id/cadastrar_login"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_weight="0.1"
     android:ems="10"
     android:inputType="textPersonName"
-    android:text="Login" />
+    android:hint="Login" />
 
     <EditText
         android:layout_marginTop="8dp"
-        android:id="@+id/senha"
+        android:id="@+id/cadastrar_senha"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.1"
         android:ems="10"
         android:inputType="textPassword"
-        android:text="Senha" />
+        android:hint="Senha"
+        android:layout_marginBottom="8dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Confirme sua senha:"
+        android:layout_marginTop="16dp"
+        android:textSize="24sp"/>
+
+    <EditText
+        android:id="@+id/cadastrar_senha_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:hint="Senha"
+        android:inputType="textPassword" />
+
 
     <Button
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="320dp"
-        android:layout_weight="0.5"
+        android:layout_marginTop="32dp"
         android:background="@android:color/holo_blue_dark"
         android:text="Cadastrar"
         android:textColor="@android:color/white"
         android:textSize="20sp"
         />
+
 </LinearLayout>
